--- a/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -11,11 +11,16 @@
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
-    <link href="/Content/JQueryUI/jquery-ui.css" rel="stylesheet">
-    <link href="/Content/Bootstrap/bootstrap.css" rel="stylesheet">
-    <link href="/Content/FontAwesome/font-awesome.css" rel="stylesheet">
-    <link href="/Content/MvcGrid/mvc-grid.css" rel="stylesheet">
-    <link href="/Content/Shared/base.css" rel="stylesheet">
+    <environment names="Development">
+        <link href="~/Content/JQueryUI/jquery-ui.css" rel="stylesheet">
+        <link href="~/Content/Bootstrap/bootstrap.css" rel="stylesheet">
+        <link href="~/Content/FontAwesome/font-awesome.css" rel="stylesheet">
+        <link href="~/Content/MvcGrid/mvc-grid.css" rel="stylesheet">
+        <link href="~/Content/Shared/base.css" rel="stylesheet">
+    </environment>
+    <environment names="Staging,Production">
+        <link href="~/content/page/bundle.min.css" rel="stylesheet">
+    </environment>
 </head>
 <body class="container-fluid">
     <div class="row">
@@ -166,12 +171,17 @@
         </div>
     </div>
 
-    <script src="/Scripts/JQuery/jquery.min.js"></script>
-    <script src="/Scripts/JQuery/jquery.UI.block.js"></script>
-    <script src="/Scripts/Bootstrap/bootstrap.min.js"></script>
-    <script src="/Scripts/JQueryUI/jquery-ui.min.js"></script>
-    <script src="/Scripts/MvcGrid/mvc-grid.js"></script>
-    <script src="/Scripts/Shared/site.js"></script>
+    <environment names="Development">
+        <script src="~/Scripts/JQuery/jquery.js"></script>
+        <script src="~/Scripts/JQuery/jquery.UI.block.js"></script>
+        <script src="~/Scripts/Bootstrap/bootstrap.js"></script>
+        <script src="~/Scripts/JQueryUI/jquery-ui.js"></script>
+        <script src="~/Scripts/MvcGrid/mvc-grid.js"></script>
+        <script src="~/Scripts/Shared/site.js"></script>
+    </environment>
+    <environment names="Staging,Production">
+        <script src="~/scripts/page/bundle.min.js"></script>
+    </environment>
     @RenderSection("scripts", false)
 </body>
 </html>
