--- a/src/Mvc.Grid.Web/Views/_ViewImports.cshtml
+++ b/src/Mvc.Grid.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using NonFactors.Mvc.Grid.Web.Models;
+﻿@using NonFactors.Mvc.Grid;
 @using NonFactors.Mvc.Grid.Web;
-@using NonFactors.Mvc.Grid;
+@using NonFactors.Mvc.Grid.Web.Models;
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
